--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Current price: <span th:text="${price}"></span></a>
+                        <a class="nav-link active" aria-current="page" href="/prices" th:text="${price}"></a>
                     </li>
                 </ul>
                 <form class="d-flex">
